2002-03-28  Ion Badulescu  <ionut@buggy.badula.org>

	* libamu/Makefile.am (EXTRA_DIST): added strerror.c

	* libamu/strerror.c: strerror() implementation for systems lacking it

	* doc/am-utils.texi (History): rewrote the history :) about autofs
	support

	* conf/autofs/autofs_solaris_v2_v3.c: updated copyright;
	(autofs_unmount_2_req): minor cleanup
	(create_autofs_service): print log message
	(destroy_autofs_service): ditto

	* conf/autofs/autofs_linux.c: updated copyright

	* amd/nfs_start.c (mount_automounter): move the debug message into
	create_autofs_service()

	* amd/amd.c (main): call destroy_autofs_service() before
	going_down(), not after

	* configure.in: added strerror to AC_CHECK_FUNCS(); disable ldap
	if the ldap headers are not found

2002-03-28  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>

	* amd/info_ldap.c: patch from "Sebastien Bahloul"
	<sebastien.bahloul@medasys.org> to fix a simple initialization bug
	and change "HE" to HE_ENT so as to compile on HPUX.

2002-02-26  Erez Zadok  <ezk@t3.fsl.cs.sunysb.edu>

	* conf/nfs_prot/nfs_prot_freebsd3.h (na_uid): freebsd4.5 uses nfs
	atttributes field named "uid".  So #define na_uid to it.

2002-02-12  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>

	* scripts/lostaltmail.in: don't verify user if -noverify option
	was turned on.  fix comment typo.

2002-02-11  Erez Zadok  <ezk@agora.fsl.cs.sunysb.edu>

	* amd/Makefile.am (TESTS): enable one test script, test1.sh.

	* amd/test1.sh: re-commit simple test script.

2002-02-11  Ion Badulescu  <ion@guppy.limebrokerage.com>

	* Released snapshot 6.1a5

	* NEWS: Solaris autofs readdir() support, Linux autofs sublink fix

	* README: require newer auto-tools, update mailing list address

	* README.autofs: major update

	* configure.in: version changed to 6.1a5

2002-02-11  Ion Badulescu  <ionut@moisil.badula.org>

	* conf/autofs/autofs_linux.c (autofs_link_mount): don't do a
	stat() on the am_link if called from the parent amd, to prevent
	deadlocks
